<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BACCalculator_MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <RadioGroup
        android:id="@+id/drinkSize"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/drinkSizeLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <RadioButton
            android:id="@+id/oneOzLabel"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/drinkSizeOneoz"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="100dp" />

        <RadioButton
            android:id="@+id/fiveOzLabel"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:text="@string/drinkSizeFiveoz"
            tools:layout_editor_absoluteX="219dp"
            tools:layout_editor_absoluteY="527dp" />

        <RadioButton
            android:id="@+id/tweleveOzLabel"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/twelveDrinkSizeLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="310dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/weight_Label"
        android:textColor="@color/customDarkGray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weightPlainText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Enter Weight"
        android:digits="0123456789."
        android:inputType="textPersonName|number|numberDecimal"
        android:text="@string/weightPlainText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/genderToggle"
        style="?attr/actionBarStyle"
        android:layout_width="73dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="ToggleButton"
        android:textAllCaps="false"
        android:textOff="@string/gendeTextOffMale"
        android:textOn="@string/genderTextOnFemale"
        android:textSize="12dp"
        android:tooltipText="Click to Change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/genderLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/genderLabel"
        android:textColor="@color/customDarkGray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toEndOf="@+id/weightPlainText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButtonLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:text="@string/saveButtonLabel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/drinkSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/drinkSizeLabel"
        android:textColor="@color/customDarkGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326" />

    <TextView
        android:id="@+id/alchoholpercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/alchoholpercentLabel"
        android:textColor="@color/customDarkGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455" />

    <SeekBar
        android:id="@+id/seekBarAlcoholPercentage"
        android:layout_width="228dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="25"
        android:min="1"
        android:progress="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/alchoholpercentLabel"
        app:layout_constraintTop_toBottomOf="@+id/drinkSize"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/seekbarPercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/seekBarPercentValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toEndOf="@+id/seekBarAlcoholPercentage"
        app:layout_constraintTop_toBottomOf="@+id/drinkSize"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/addDrinkbuttonLabel"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/addDrinkbuttonLabel"
        android:textStyle="normal"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resetButtonLabel"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarAlcoholPercentage"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/resetButtonLabel"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/resetButtonLabel"
        android:textStyle="normal"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarAlcoholPercentage"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/bacLevelLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/bacLevelLabel"
        android:textColor="@color/customDarkGray"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDrinkbuttonLabel"
        app:layout_constraintVertical_bias="0.171" />

    <ProgressBar
        android:id="@+id/progressBarForBacLevel"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="@integer/progressBarMaxLimit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bacLevelLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="166dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/statusLabel"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/statusValue"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarForBacLevel"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/statusValue"
        android:layout_width="136dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarForBacLevel"
        app:layout_constraintVertical_bias="0.32999998" />

</android.support.constraint.ConstraintLayout>